--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID='AKIAX3CL23VRYVCNV6JM'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='AKIAX3CL23VR3AFZSN73'
+AWS_SECRET_ACCESS_KEY='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'
 AWS_REGION='eu-central-1'
 AWS_BUCKET='rentaj.best'
